--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <body>
         <h1> Odin Recipes</h1>
         <p> If you are a vegetarian looking for some simple recipes that you can make at home, look no further. Here, I have some amazingly delicious and easy to make vegetarian breakfast recipes that will keep you coming back for more.<p>
-        
+        <ul>
+            <li><a href="recipes/basic-crepes.html">Basic Crepes</a></li>
+            <li><a href="recipes/french-toast.html">Fluffy French Toast</a></li>
+            <li><a href="recipes/shakshuka.html">Chef John's Shakshuka</a></li>
+        </ul>
     </body>
 
