Add images for recipes on index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <p> If you are a vegetarian looking for some simple recipes that you can make at home, look no further. Here, I have some amazingly delicious and easy to make vegetarian breakfast recipes that will keep you coming back for more.<p>
         <ul>
             <li><a href="recipes/basic-crepes.html">Basic Crepes</a></li>
+            <img src="images/crepes.jpeg" width="100" alt="small picture of crepes with whipped cream and berries">
             <li><a href="recipes/french-toast.html">Fluffy French Toast</a></li>
+            <img src="images/french-toast.jpeg" width="100" alt="small picture of two pieces of french toast with pieces of banana and strawberries">
+        
             <li><a href="recipes/shakshuka.html">Chef John's Shakshuka</a></li>
+            <img src="images/shakshuka.jpeg" width="100" alt="small picture of eggs on a bed of tomato gravy sprinkled with basil and feta cheese">
         </ul>
     </body>
 
