add description, ingredients and directions on recipes

--- a/recipes/basic-crepes.html
+++ b/recipes/basic-crepes.html
@@ -7,7 +7,29 @@
     </head>
 <body>
     <h1>Basic Crepes</h1>
-    <img src="../images/crepes.jpeg" height="600" alt="image of some tasty looking crepes on a plate with whipped cream, strawberries, blueberries and blackberries"
+    <img src="../images/crepes.jpeg" height="600" alt="image of some tasty looking crepes on a plate with whipped cream, strawberries, blueberries and blackberries">
+    <h2>Description</h2>
+    <p>Here is a simple but delicious crepe batter which can be made in minutes. It's made from ingredients that everyone has on hand.</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup all-purpose flour</li>
+        <li>2 eggs</li>
+        <li>½ cup milk</li>
+        <li>½ cup water</li>
+        <li>¼ teaspoon salt</li>
+        <li>2 tablespoons butter, melted</li>
 
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li><h3>Step 1</h3>
+        <p>In a large mixing bowl, whisk together the flour and the eggs. Gradually add in the milk and water, stirring to combine. Add the salt and butter; beat until smooth.</p></li>
+        <li><h3>Step 2</h3>
+        <p>Heat a lightly oiled griddle or frying pan over medium high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each crepe. Tilt the pan with a circular motion so that the batter coats the surface evenly.</p></li>
+        <li><h3>Step 3</h3>
+        <p>Cook the crepe for about 2 minutes, until the bottom is light brown. Loosen with a spatula, turn and cook the other side. Serve hot.</p></li>
+    </ol>
 </body>
 </html>
