--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -7,5 +7,31 @@
     <body>
         <h1>Fluffy French Toast</H1>
             <img src="../images/french-toast.jpeg" height="600" alt="picture of two french toasts on a plate with sprinkled sugar, thin slices of banana and cut strawberries">
-    </body>
+            <h2>Description</h2>
+            <p>This is the best French toast recipe. It's different because it uses flour. I have given it to some friends and they've all liked it better than the French toast they usually make!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>¼ cup all-purpose flour</li>
+            <li>1 cup milk</li>
+            <li>3 eggs</li>
+            <li>1 tablespoon white sugar</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>½ teaspoon ground cinnamon</li>
+            <li>1 pinch salt</li>
+            <li>12 thick slices bread</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li><h3>Step 1</h3>
+                <p>Measure flour into a large mixing bowl. Slowly whisk in milk. Whisk in eggs, sugar, vanilla extract, cinnamon, and salt until smooth.</p>
+            </li>
+            <li><h3>Step 2</h3>
+            <p>Heat a lightly oiled griddle or frying pan over medium heat.</p></li>
+            <li><h3>Step 3</h3>
+            <p>Soak bread slices in milk mixture until saturated./p></li>
+            <li><h3>Step 4</h3>
+            <p>Working in batches, cook bread on the preheated griddle or pan until golden brown on each side. Serve hot.</p></li>
+            
+        </ol>
+        </body>
 </html>
