--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -7,6 +7,49 @@
     <body>
         <h1>Chef John's Shakshuka</h1>
         <img src="../images/shakshuka.jpeg" height="600" alt="picture of a shakshuka on a pan, six fried eggs on a bed of red tomato gravy decorated with sprinkled basil and feta cheese on top and a piece of bread on the side, placed over a wooden tray on a table">
+        <h2>Description</h2>
+        <p>This North African one-dish-meal is so fast, easy, and delicious. Be sure to cook your sauce until the veggies are nice and soft and sweet. Once the eggs go in, you can finish covered on the stove, or just pop the pan into a hot oven until they cook to your liking.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 teaspoons olive oil</li>
+            <li>1 large onion, diced</li>
+            <li>½ cup sliced fresh mushrooms</li>
+            <li>1 teaspoon salt, or more to taste</li>
+            <li>1 cup diced red bell pepper</li>
+            <li>1 jalapeno pepper, seeded and sliced</li>
+            <li>1 teaspoon cumin</li>
+            <li>½ teaspoon paprika</li>
+            <li>½ teaspoon ground turmeric</li>
+            <li>½ teaspoon freshly ground black pepper, plus more to taste</li>
+            <li>¼ teaspoon cayenne pepper</li>
+            <li>1 (28 ounce) can crushed San Marzano tomatoes, or other high-quality plum tomatoes</li>
+            <li>½ cup water, or more as needed</li>
+            <li>6 large eggs</li>
+            <li>2 tablespoons crumbled feta cheese</li>
+            <li>2 tablespoons chopped fresh parsley</li>
+        </ul>
+
+        <h2>Directions</h2>
+        <ol>
+            <li><h3>Step 1</h3>
+               <p> Heat olive oil in a large, heavy skillet over medium-high heat. Add onions and mushrooms. Sprinkle with salt. 
+                Cook and stir until mushrooms release all of their liquid and start to brown, about 10 minutes. Stir in bell peppers and jalapeno pepper. 
+                Cook and stir until peppers begin to soften up, about 5 minutes. Season with cumin, paprika, turmeric, black pepper, and cayenne. Stir and cook to "wake up" the flavors, about 1 minute. 
+                Pour in crushed tomatoes and water. Adjust heat to medium and simmer uncovered until veggies are softened and sweet, stirring occasionally, 15 to 20 minutes. Add more water if sauce becomes too thick.</p>
+
+            </li>
+            <li><h3>Step 2</h3>
+                <p>Make a depression in the sauce for each egg with a large spoon. 
+                    Crack egg into a small ramekin and slide gently into each indentation; 
+                    repeat with the rest of the eggs. Season with salt and pepper. 
+                    Cover and cook until eggs are to your desired doneness.
+                </p>
+            </li>
+            <li><h3>Step 3</h3>
+                <p>Top with feta cheese and parsley.</p>    
+            </li>
+
+        </ol>
 
     </body>
 </html>
